Larger sprites are centered correctly and don't get cut off.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html,div,dl,dt,dd,ul,ol,li,pre,form,label,fieldset,p,blockquote,input{margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;margin:0;padding:0}
-html{background:#FFF;color:#333;font:.875em/1.5 "Helvetica Neue",Arial,sans-serif}
+html{background:#FFF;color:#333;font:.875em/1.5 "Helvetica Neue",Arial,sans-serif;overflow-x:hidden}
 body{max-width:40em;margin:0 auto;padding:.5em}
 
 h1{font-weight:700;font-size:2em;margin:0}
@@ -19,19 +19,22 @@ label select{margin:0}
 input[type="checkbox"]{vertical-align:baseline;margin-right:.5em}
 input[type="button"],input[type="submit"]{padding:.125em .25em;cursor:pointer;font-size:1em}
 abbr{cursor:help;border-bottom:1px dotted;text-decoration:none}
-
+.clear{clear:both}
 
 header{margin:1em 0;text-align:center}
 
 #controls,#controls:before{border:1px solid #000;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px}
-#controls{padding:.5em 1em;border-bottom-width:2px;position:relative;z-index:10;max-width:30em;margin:0 auto}
+#controls{padding:.5em 1em;border-bottom-width:2px;position:relative;z-index:10;max-width:31em;margin:0 auto}
 #controls:before{border-top-width:2px;content:"";display:block;position:absolute;z-index:-1;top:1px;left:1px;right:1px;bottom:1px}
 .loading{background:url(loading.gif) no-repeat 95% center}
 
-#results{overflow:hidden}
+
 #results li{float:left;width:33%;text-align:center;text-shadow:2px 2px 0 #FFF}
 #results .nature{color:#888}#results .shiny{color:#F4D04D}
-#results .wrapper{height:120px;width:172px;margin:0 auto;line-height:172px;overflow:visible} /* Image wrapper */
+#results .wrapper{height:120px;width:172px;margin:0 auto;line-height:172px;overflow:visible;position:relative} /* Image wrapper */
+#results .wrapper img{position:absolute;
+  left:50%;transform:translateX(-50%);
+  margin:auto;top:0;bottom:0}
 #results p{margin-top:1.5em}
 #results li.imageless{font-weight:700;margin:2em 0}
 
